--- a/landlord/templates/landlord/personal_data.html
+++ b/landlord/templates/landlord/personal_data.html
@@ -4,12 +4,20 @@
 
 {% block content %}
 
-{% landlord_nav %}
+{% landlord_header %}
 
 <div class="container">
-  {{ user }} <br>
-  {{ user.phone }} <br>
-  {{ user.email }} <br>
+  <div class="container-info">
+
+    <div class="info" id=account_data>
+      <div class="info-item">
+        <h2>{{ user }}</h2>
+        <p>{{ user.phone }}</p>
+        <p>{{ user.email }}</p>
+      </div>
+    </div>
+      
+  </div>
 </div>
 
 {% endblock content %}
