--- a/accounts/templates/accounts/account.html
+++ b/accounts/templates/accounts/account.html
@@ -12,7 +12,7 @@
 
 <div class="container">
   <div class="container-info">
-    
+
     {% if active_reservs %}
     <div class="info">
       {% for reserv in active_reservs|dictsort:"start_date" %}
@@ -20,11 +20,11 @@
         <a href="{{ reserv.apartment.get_absolute_url }}">
           <h2>{{ reserv.apartment }}</h2>
         </a>
-        <p>Прибытие: {{ reserv.start_date }}</p>
-        <p>Выезд: {{ reserv.end_date }}</p>
+        <p>Прибытие: {{ reserv.start_date|date:"d-m-Y" }}</p>
+        <p>Выезд: {{ reserv.end_date|date:"d-m-Y" }}</p>
         <p>Всего ночей: {{ reserv.days_total }}</p>
-        <p>Итого к оплате: {{ reserv.price_total|floatformat:"0g" }} р.</p>
-        <p>Оплата наличными на месте.</p>
+        <p>Итого к оплате: {{ reserv.price_total|floatformat:"0g" }}&nbsp;р.</p>
+        <p>Оплата наличными.</p>
         <div class="cancel">
           <a href="{{ reserv.get_absolute_url }}">
             <h3>Отменить</h3>
@@ -42,11 +42,11 @@
         <a href="{{ reserv.apartment.get_absolute_url }}">
           <h2>{{ reserv.apartment }}</h2>
         </a>
-        <p>Прибытие: {{ reserv.start_date }}</p>
-        <p>Выезд: {{ reserv.end_date }}</p>
+        <p>Прибытие: {{ reserv.start_date|date:"d-m-Y" }}</p>
+        <p>Выезд: {{ reserv.end_date|date:"d-m-Y" }}</p>
         <p>Всего ночей: {{ reserv.days_total }}</p>
-        <p>Итого к оплате: {{ reserv.price_total|floatformat:"0g" }} р.</p>
-        <p>Оплата наличными на месте.</p>
+        <p>Итого к оплате: {{ reserv.price_total|floatformat:"0g" }}&nbsp;р.</p>
+        <p>Оплата наличными.</p>
       </div>
       {% endfor %}
     </div>
@@ -59,11 +59,11 @@
         <a href="{{ reserv.apartment.get_absolute_url }}">
           <h2>{{ reserv.apartment }}</h2>
         </a>
-        <p>Прибытие: {{ reserv.start_date }}</p>
-        <p>Выезд: {{ reserv.end_date }}</p>
+        <p>Прибытие: {{ reserv.start_date|date:"d-m-Y" }}</p>
+        <p>Выезд: {{ reserv.end_date|date:"d-m-Y" }}</p>
         <p>Всего ночей: {{ reserv.days_total }}</p>
-        <p>Итого к оплате: {{ reserv.price_total|floatformat:"0g" }} р.</p>
-        <p>Оплата наличными на месте.</p>
+        <p>Итого к оплате: {{ reserv.price_total|floatformat:"0g" }}&nbsp;р.</p>
+        <p>Оплата наличными.</p>
       </div>
       {% endfor %}
     </div>
