--- a/rooms/templates/rooms/room_reserv_details.html
+++ b/rooms/templates/rooms/room_reserv_details.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 
+{% load account_tag %}
+
 {% block content %}
+
+{% account_header %}
 
 <div class="container">
   <div class="container-info">
@@ -9,15 +13,15 @@
         <a href="{{ current_reserv.apartment.get_absolute_url }}">
           <h2>{{ current_reserv.apartment }}</h2>
         </a>
-        <p>Прибытие: {{ current_reserv.start_date }}</p>
-        <p>Выезд: {{ current_reserv.end_date }}</p>
+        <p>Прибытие: {{ current_reserv.start_date|date:"d-m-Y" }}</p>
+        <p>Выезд: {{ current_reserv.end_date|date:"d-m-Y" }}</p>
         <p>Всего ночей: {{ current_reserv.days_total }}</p>
-        <p>Итого к оплате: {{ current_reserv.price_total|floatformat:"0g" }} р.</p>
-        <p>Оплата наличными на месте.</p>
+        <p>Итого к оплате: {{ current_reserv.price_total|floatformat:"0g" }}&nbsp;р.</p>
+        <p>Оплата наличными.</p>
         {% if current_reserv.status %}
           <form method="post">
             {% csrf_token %}
-            <button type="submit" class="cancel-btn">Отменить бронирование</button>
+            <button type="submit" class="cancel-btn">Уверены?</button>
           </form>
         {% endif %}
       </div>
