--- a/rooms/templates/rooms/rooms_list.html
+++ b/rooms/templates/rooms/rooms_list.html
@@ -4,7 +4,6 @@
 
 {% block content %}
 
-<div class="container">
   <div class="list-container">
     <h1>Рекомендуемое жилье в Гунибском районе</h1>
     {% for item in rooms_list %}
@@ -40,42 +39,7 @@
     </div>
     {% endfor%}
   </div>
-</div>
 
-<!-- Пагинация -->
-{% if page_obj.has_other_pages %}
-<div class="pagination">
-
-  {% if page_obj.has_previous %}
-    <li class="page-item">
-      <a class="page-link" href="?{{ place }}page={{ page_obj.previous_page_number }}">
-        <img src="{% static 'images/arrow.png' %}">
-      </a>
-    </li>
-  {% endif %}
-
-  {% for page in page_obj.paginator.page_range %}
-    {% if page_obj.number == page %}
-      <li class="page-item current">
-        <a class="page-link" href="?{{ place }}page={{ page }}">{{ page }}</a>
-      </li>
-    {% elif page > page_obj.number|add:-3 and page < page_obj.number|add:3 %}
-      <li class="page-item">
-        <a class="page-link" href="?{{ place }}page={{ page }}">{{ page }}</a>
-      </li>
-    {% endif %}
-  {% endfor %}
-
-  {% if page_obj.has_next %}
-    <li class="page-item">
-      <a class="page-link" href="?{{ place }}page={{ page_obj.next_page_number }}">
-        <img src="{% static 'images/arrow.png' %}" class="right-arrow">
-      </a>
-    </li>
-  {% endif %}
-
-</div>
-{% endif %}
-<!-- end Пагинация -->
+  {% include 'inc/_paginator.html' %}
 
 {% endblock %}
