--- a/config/static/css/style.css
+++ b/config/static/css/style.css
@@ -5,6 +5,268 @@
     font-family: 'poppins', sans-serif;
 }
 
+/* ----- home page ----- */
+
+/* Интересные места */
+.sub-title {
+    margin: 50px 0 20px;
+    font-size: 2.2vw;
+    font-weight: 500;
+    color: #333;
+}
+
+.places {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-gap: 30px;
+}
+
+.places div img {
+    width: 100%;
+    border-radius: 10px;
+    width: 223px;
+    height: 150px;
+    object-fit: cover;
+}
+
+.places div {
+    position: relative;
+}
+
+.places div span {
+    text-shadow: 1px 1px 2px rgb(175, 171, 171), 0 0 1em rgb(101, 101, 102);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: #fff;
+}
+
+/* Населенные пункты */
+.locality {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-gap: 30px;
+    margin-bottom: 30px;
+}
+
+.locality a {
+    text-decoration: none;
+}
+
+.locality div img {
+    width: 100%;
+    border-radius: 10px;
+    width: 223px;
+    height: 150px;
+    object-fit: cover;
+}
+
+.locality h3 {
+    font-weight: 600;
+    margin-top: 10px;
+}
+
+
+
+/* about-msg */
+.about-msg {
+    text-align: center;
+    margin: 80px 0;
+    color: #333;
+    font-size: 17px;
+}
+
+.about-msg h2 {
+    font-size: 28px;
+    margin-bottom: 30px;
+    font-weight: 500;
+}
+
+/* ----------for small screen devices ( up to 1280px) ---------- */
+
+@media (max-width: 1280px) {
+    .logo {
+        position: fixed;
+        top: 12px;
+        left: 7%;
+    }
+
+    nav .fa-bars {
+        display: block;
+        position: fixed;
+        top: 12px;
+        right: 7%;
+        color: #fff;
+        font-size: 28px;
+    }
+
+    nav {
+        position: fixed;
+        top: 0;
+        z-index: 100;
+        display: inline-block;
+        width: 100%;
+        padding: 50px 7% 0;
+        background: #000;
+        text-align: right;
+        max-height: 50px;
+        overflow: hidden;
+        transition: max-height 0.5s;
+    }
+
+    nav .nav-links {
+        margin-top: 50px;
+    }
+
+    nav .nav-links li {
+        margin: 15px 0;
+        display: block;
+    }
+
+    .nav-btn {
+        display: inline-block;
+    }
+
+    .nav-btn li {
+        margin: 15px 0 20px 0;
+        display: block;
+    }
+
+    .hidemenu {
+        max-height: 350px;
+    }
+
+    .header h1 {
+        padding-top: 300px;
+        font-size: 7vw;
+    }
+
+    .search-bar {
+        width: 100%;
+    }
+
+    .search-bar form {
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+
+    .search-bar form input {
+        display: block;
+        border: 0;
+        outline: none;
+        background: transparent;
+    }
+
+    .search-bar form button img {
+        width: 15px;
+        margin-top: 7px;
+    }
+
+    .location-input {
+        flex: 1;
+    }
+
+    .search-bar form label {
+        font-weight: 600;
+    }
+
+    .sub-title {
+        font-size: 3.5vw;
+    }
+
+    .places div img {
+        width: 100%;
+    }
+
+    .locality div img {
+        width: 100%;
+    }
+
+    .about-msg {
+        font-size: 15px;
+    }
+}
+
+/* ----------for small screen devices ( up to 900px) ---------- */
+
+@media (max-width: 900px) {
+    .header h1 {
+        padding-top: 200px;
+    }
+
+    .search-bar form {
+        display: block;
+    }
+
+    .search-bar form input {
+        border-bottom: 1px solid #ddd;
+        width: 100%;
+        margin-bottom: 20px;
+        margin-top: 10px;
+        padding-bottom: 10px;
+    }
+
+    .search-bar {
+        width: 70%;
+        margin: 30px auto;
+        padding: 20px 10px 30px;
+        border-radius: 5px;
+        position: relative;
+    }
+
+    .search-bar form button {
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translate(-50%, 50%);
+    }
+
+    .sub-title {
+        font-size: 4.5vw;
+    }
+    .about-msg {
+        margin: 50px 0;
+    }
+}
+
+/* ----------for small screen devices ( up to 700px) ---------- */
+@media (max-width: 700px) {
+    .search-bar {
+        width: 90%;
+    }
+
+    .sub-title {
+        font-size: 6vw;
+    }
+}
+
+/* ----------for small screen devices ( up to 310px) ---------- */
+@media (max-width: 310px) {
+    .search-bar {
+        width: 100%;
+    }
+
+    .sub-title {
+        font-size: 7vw;
+    }
+
+    .flatpickr-calendar{
+        font-size: 12px;
+        width: 280px;
+    }
+    .flatpickr-weekdays{
+        width: 90%;
+    }
+    .dayContainer{
+        min-width: 260px;
+        max-width: 280px;
+    }
+}
+/* ----- end home page ----- */
+
 /*----- locality list / intresting places -----*/
 .container {
     padding: 0px 7%;
