--- a/config/static/css/style_navbar.css
+++ b/config/static/css/style_navbar.css
@@ -1,3 +1,140 @@
+/* ----------header---------- */
+.header {
+    min-height: 100vh;
+    width: 100%;
+    background-image:
+        linear-gradient(rgba(0, 0, 0, 0.3),
+            rgba(0, 0, 0, 0.3)),
+        url("/static/images/gamsutl.png");
+    background-size: cover;
+    background-position: center;
+}
+
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 7%;
+}
+
+.logo {
+    width: 140px;
+    cursor: pointer;
+    text-decoration: none;
+    color: #fff;
+    font-size: 24px;
+}
+
+.nav-links li,
+.nav-btn li {
+    list-style: none;
+    display: inline-block;
+    margin: 10px 30px;
+}
+
+.nav-links li a {
+    text-decoration: none;
+    color: #fff;
+}
+
+.account-btn {
+    border: none;
+    border-radius: 20px;
+    height: 32px;
+    width: 60px;
+    position: relative;
+    background: #fff;
+}
+
+.nav-btn {
+    display: flex;
+    align-items: center;
+}
+
+.nav-btn div {
+    display: inline-block;
+    text-align: center;
+}
+
+.account-btn img {
+    width: 18px;
+    height: 18px;
+    margin: 6px 0;
+}
+
+.create_room-btn,
+.logout-btn,
+.login-btn,
+.register-btn {
+    background: #fff;
+    color: #000;
+    padding: 8px 20px;
+    border-radius: 20px;
+    text-decoration: none;
+    font-size: 14px;
+}
+
+.container {
+    padding: 0 7%;
+}
+
+.header h1 {
+    font-size: 4vw;
+    font-weight: 500;
+    color: #fff;
+    text-align: center;
+    padding-top: 22%;
+}
+
+nav .fa-bars {
+    display: none;
+}
+
+.search-bar {
+    background: #fff;
+    width: 70%;
+    margin: 30px auto;
+    padding: 6px 10px 6px 30px;
+    border-radius: 50px;
+}
+
+.search-bar form {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.search-bar form input {
+    display: block;
+    border: 0;
+    outline: none;
+    background: transparent;
+}
+
+.search-bar form button {
+    background: #ff5361;
+    width: 55px;
+    height: 55px;
+    border-radius: 50%;
+    border: 0;
+    outline: 0;
+    cursor: pointer;
+}
+
+.search-bar form button img {
+    width: 15px;
+    margin-top: 7px;
+}
+
+.location-input {
+    flex: 1;
+}
+
+.search-bar form label {
+    font-weight: 600;
+}
+
+
 /* ----------navbar-white---------- */
 
 nav {
@@ -68,7 +205,7 @@ nav .fa-bars {
     border-radius: 2px;
 }
 
-.account-btn{
+.account-btn {
     /* border: 1px solid #ff5361; */
     border: 1px solid #ff5361;
     border-radius: 20px;
@@ -77,15 +214,18 @@ nav .fa-bars {
     position: relative;
     /* background: #ccc; */
 }
-.nav-btn{
+
+.nav-btn {
     display: flex;
     align-items: center;
 }
-.nav-btn div{
+
+.nav-btn div {
     display: inline-block;
     text-align: center;
 }
-.account-btn img{
+
+.account-btn img {
     width: 18px;
     height: 18px;
     margin: 6px 0;
