--- a/accounts/templates/accounts/account.html
+++ b/accounts/templates/accounts/account.html
@@ -21,6 +21,7 @@
       </a>
       <p>Прибытие: {{ reserv.start_date|date:"d-m-Y" }}</p>
       <p>Выезд: {{ reserv.end_date|date:"d-m-Y" }}</p>
+      <p>Гостей: {{ reserv.guests }}</p>
       <p>Всего ночей: {{ reserv.days_total }}</p>
       <p>Итого к оплате: {{ reserv.price_total|floatformat:"0g" }}&nbsp;р.</p>
       <p>Оплата наличными.</p>
@@ -43,6 +44,7 @@
       </a>
       <p>Прибытие: {{ reserv.start_date|date:"d-m-Y" }}</p>
       <p>Выезд: {{ reserv.end_date|date:"d-m-Y" }}</p>
+      <p>Гостей: {{ reserv.guests }}</p>
       <p>Всего ночей: {{ reserv.days_total }}</p>
       <p>Итого к оплате: {{ reserv.price_total|floatformat:"0g" }}&nbsp;р.</p>
       <p>Оплата наличными.</p>
@@ -60,6 +62,7 @@
       </a>
       <p>Прибытие: {{ reserv.start_date|date:"d-m-Y" }}</p>
       <p>Выезд: {{ reserv.end_date|date:"d-m-Y" }}</p>
+      <p>Гостей: {{ reserv.guests }}</p>
       <p>Всего ночей: {{ reserv.days_total }}</p>
       <p>Итого к оплате: {{ reserv.price_total|floatformat:"0g" }}&nbsp;р.</p>
       <p>Оплата наличными.</p>
