--- a/landlord/templates/landlord/account.html
+++ b/landlord/templates/landlord/account.html
@@ -19,6 +19,7 @@
       <h2>{{ item.user }}</h2>
       <p>Прибытие: {{ item.start_date|date:"d-m-Y" }}</p>
       <p>Выезд: {{ item.end_date|date:"d-m-Y" }}</p>
+      <p>Гостей: {{ item.guests }}</p>
       <p>Всего ночей: {{ item.days_total }}</p>
       <p>К оплате: {{ item.price_total|floatformat:"0g" }}&nbsp;р.</p>
     </div>
