--- a/config/static/css/style_navbar.css
+++ b/config/static/css/style_navbar.css
@@ -62,18 +62,6 @@ nav {
     margin: 6px 0;
 }
 
-.create_room-btn,
-.logout-btn,
-.login-btn,
-.register-btn {
-    background: #fff;
-    color: #000;
-    padding: 8px 20px;
-    border-radius: 20px;
-    text-decoration: none;
-    font-size: 14px;
-}
-
 .container {
     padding: 0 7%;
 }
@@ -137,31 +125,13 @@ nav .fa-bars {
 
 /* ----------navbar-white---------- */
 
-nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px 7%;
-}
-
 .navbar-white {
     background: #fff;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.05);
 }
 
 .navbar-white .logo {
-    width: 140px;
-    cursor: pointer;
-    text-decoration: none;
-    font-size: 24px;
     color: #ff5361;
-}
-
-.nav-links li,
-.nav-btn li {
-    list-style: none;
-    display: inline-block;
-    margin: 10px 30px;
 }
 
 .navbar-white .nav-links li a {
@@ -185,10 +155,6 @@ nav.navbar-white .fa-bars {
     color: #000;
 }
 
-nav .fa-bars {
-    display: none;
-}
-
 .active {
     position: relative;
 }
@@ -205,14 +171,12 @@ nav .fa-bars {
     border-radius: 2px;
 }
 
-.account-btn {
-    /* border: 1px solid #ff5361; */
+.navbar-white .account-btn {
     border: 1px solid #ff5361;
     border-radius: 20px;
     height: 32px;
     width: 60px;
     position: relative;
-    /* background: #ccc; */
 }
 
 .nav-btn {
@@ -290,5 +254,103 @@ nav .fa-bars {
 
     .hidemenu {
         max-height: 350px;
+    }
+
+    .header h1 {
+        padding-top: 300px;
+        font-size: 7vw;
+    }
+
+    .search-bar {
+        width: 100%;
+    }
+
+    .search-bar form {
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+    }
+
+    .search-bar form input {
+        display: block;
+        border: 0;
+        outline: none;
+        background: transparent;
+    }
+
+    .search-bar form button img {
+        width: 15px;
+        margin-top: 7px;
+    }
+
+    .location-input {
+        flex: 1;
+    }
+
+    .search-bar form label {
+        font-weight: 600;
+    }
+}
+
+/* ----------for small screen devices ( up to 915px) ---------- */
+
+@media (max-width: 915px) {
+    .header h1 {
+        padding-top: 200px;
+    }
+
+    .search-bar form {
+        display: block;
+    }
+
+    .search-bar form input {
+        border-bottom: 1px solid #ddd;
+        width: 100%;
+        margin-bottom: 20px;
+        margin-top: 10px;
+        padding-bottom: 10px;
+    }
+
+    .search-bar {
+        width: 70%;
+        margin: 30px auto;
+        padding: 20px 10px 30px;
+        border-radius: 5px;
+        position: relative;
+    }
+
+    .search-bar form button {
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        transform: translate(-50%, 50%);
+    }
+}
+
+/* ----------for small screen devices ( up to 700px) ---------- */
+@media (max-width: 700px) {
+    .search-bar {
+        width: 90%;
+    }
+}
+
+/* ----------for small screen devices ( up to 310px) ---------- */
+@media (max-width: 310px) {
+    .search-bar {
+        width: 100%;
+    }
+
+    .flatpickr-calendar {
+        font-size: 12px;
+        width: 280px;
+    }
+
+    .flatpickr-weekdays {
+        width: 90%;
+    }
+
+    .dayContainer {
+        min-width: 260px;
+        max-width: 280px;
     }
 }
