--- a/config/static/css/style.css
+++ b/config/static/css/style.css
@@ -303,9 +303,14 @@
         font-size: 20px;
     }
 
+    
     .object-img img {
         width: 100%;
         height: 100%;
+    }
+
+    .object-info{
+        padding-top: 10px;
     }
 
     .object-info h3 {
@@ -331,6 +336,13 @@
 }
 
 /*----- rooms list -----*/
+.object-info ul{
+    display: flex;
+}
+.object-info li{
+    list-style: none;
+}
+
 .object-info i {
     color: #ff5361;
     font-size: 18px;
@@ -339,6 +351,7 @@
 
 .object-price {
     text-align: right;
+    padding-bottom: 5px;
 }
 
 .object-price h4 {
@@ -348,6 +361,17 @@
 .object-price h4 span {
     font-size: 16px;
     font-weight: 500;
+}
+
+/* ----------for small screen devices ( up to 700px) ---------- */
+
+@media (max-width: 700px) {
+    .object-info ul{
+        display: block;
+    }
+    .slash{
+        display: none;
+    }
 }
 
 /*----- room details -----*/
