--- a/config/static/css/style.css
+++ b/config/static/css/style.css
@@ -303,13 +303,13 @@
         font-size: 20px;
     }
 
-    
+
     .object-img img {
         width: 100%;
         height: 100%;
     }
 
-    .object-info{
+    .object-info {
         padding-top: 10px;
     }
 
@@ -336,10 +336,11 @@
 }
 
 /*----- rooms list -----*/
-.object-info ul{
+.object-info ul {
     display: flex;
 }
-.object-info li{
+
+.object-info li {
     list-style: none;
 }
 
@@ -366,10 +367,11 @@
 /* ----------for small screen devices ( up to 700px) ---------- */
 
 @media (max-width: 700px) {
-    .object-info ul{
+    .object-info ul {
         display: block;
     }
-    .slash{
+
+    .slash {
         display: none;
     }
 }
@@ -566,7 +568,8 @@
     outline: none;
     color: #fff;
     padding: 18px;
-    width: 300px;
+    max-width: 350px;
+    flex: auto;
     border-radius: 8px;
     font-size: 16px;
     cursor: pointer;
@@ -815,6 +818,10 @@
 /* ----------for small screen devices ( up to 1500px) ---------- */
 
 @media (max-width: 1500px) {
+    .house-details {
+        padding: 0 7%;
+    }
+
     .gallery-img-1 {
         width: 550px;
     }
@@ -827,9 +834,6 @@
         width: 50%;
     }
 
-    .check-form button {
-        width: 200px;
-    }
 }
 
 /* ----------for small screen devices ( up to 1280px) ---------- */
@@ -861,8 +865,7 @@
     }
 
     .check-form button {
-        width: 150px;
-        flex: auto;
+        padding: 18px 0;
     }
 
     .review-box {
@@ -990,7 +993,7 @@
 
 @media (max-width: 440px) {
     .house-details {
-        padding: 0 7%;
+        padding: 0;
     }
 
     .modal-content {
@@ -1087,20 +1090,6 @@
 
     .modal-header .closeBtn {
         right: 20px;
-    }
-
-    .flatpickr-calendar {
-        font-size: 12px;
-        width: 280px;
-    }
-
-    .flatpickr-weekdays {
-        width: 90%;
-    }
-
-    .dayContainer {
-        min-width: 260px;
-        max-width: 280px;
     }
 }
 
