--- a/rooms/templates/rooms/room_detail.html
+++ b/rooms/templates/rooms/room_detail.html
@@ -16,7 +16,7 @@
       <div>
         <p><i class="fa-solid fa-star"></i>
           {% if rating %}
-            {{ rating.value__avg|floatformat:2 }}
+          {{ rating.value__avg|floatformat:2 }}
           {% else %}
           <b>Новое</b>
           {% endif %}
@@ -30,13 +30,14 @@
               <h3>
                 <p><i class="fa-solid fa-star"></i>
                   {% if rating %}
-                    {{ rating.value__avg|floatformat:2 }}
+                  {{ rating.value__avg|floatformat:2 }}
                   {% else %}
-                    <b>Новое</b>
-                  {% endif %}</p>
-                  <p>Отзывов: {{ room.reviews.count }}</p>
-                </h3>
-                <span class="closeBtn">&times;</span>
+                  <b>Новое</b>
+                  {% endif %}
+                </p>
+                <p>Отзывов: {{ room.reviews.count }}</p>
+              </h3>
+              <span class="closeBtn">&times;</span>
             </div>
             {% for review in reviews %}
             <div class="modal-body">
@@ -98,9 +99,9 @@
 
   <div class="small-details">
     <h2>Хозяин объекта {{ room.landlord.get_short_name }}</h2>
-      <p>Гостей: {{ room.guests }}</p>
-      <p>Кровати: {{ room.beds }}</p>
-      <p>Ванная: {{ room.bathroom }}</p>
+    <p>Гостей: {{ room.guests }}</p>
+    <p>Кровати: {{ room.beds }}</p>
+    <p>Ванная: {{ room.bathroom }}</p>
     <h4>{{ room.price }} р / ночь</h4>
   </div>
 
@@ -141,11 +142,7 @@
 
   <div class="map">
     <h3>Местоположение на карте</h3>
-    <iframe
-      src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d548.7258786056058!2d47.03069028642799!3d42.32065588274649!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sru!2sru!4v1656957836931!5m2!1sru!2sru"
-      width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-      referrerpolicy="no-referrer-when-downgrade">
-    </iframe>
+    {{ room.map_location|safe }}
     <b>{{ room.location }}</b>
     <!-- <p></p> -->
   </div>
