--- a/config/static/css/style.css
+++ b/config/static/css/style.css
@@ -280,6 +280,7 @@
         font-size: 18px;
     }
 
+    .container-left-col,
     .container-right-col {
         margin-bottom: 20px;
     }
@@ -363,7 +364,6 @@
 }
 
 /* ----------for small screen devices ( up to 700px) ---------- */
-
 @media (max-width: 700px) {
     .object-info ul {
         display: block;
@@ -487,25 +487,37 @@
 
 /* end Modal */
 
+/* gallery */
 .gallery {
     display: grid;
-    grid-gap: 10px;
-    grid-template-areas: 'first first . .''first first . .';
-    margin: 20px 0;
+    grid-column-gap: 10px;
+    margin: 10px 0;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 400px;
 }
 
-.gallery div img {
+.gallery-img-1 img {
     width: 100%;
     height: 100%;
-    display: block;
-    border-radius: 10px;
     object-fit: cover;
+    border-radius: 10px;
 }
 
-.gallery-img-1 {
-    grid-area: first;
-    width: 660px;
+.gallery-img-other {
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 49%;
 }
+
+.gallery-img-other img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+/* end gallery */
 
 .small-details p {
     display: inline-flex;
@@ -814,14 +826,9 @@
 }
 
 /* ----------for small screen devices ( up to 1500px) ---------- */
-
 @media (max-width: 1500px) {
     .house-details {
         padding: 0 7%;
-    }
-
-    .gallery-img-1 {
-        width: 550px;
     }
 
     .check-form {
@@ -835,7 +842,6 @@
 }
 
 /* ----------for small screen devices ( up to 1280px) ---------- */
-
 @media (max-width: 1280px) {
     .house-details {
         margin-top: 95px;
@@ -843,10 +849,6 @@
 
     .house-title h1 {
         font-size: 26px;
-    }
-
-    .gallery-img-1 {
-        width: 500px;
     }
 
     .guest-field {
@@ -878,12 +880,7 @@
 }
 
 /* ----------for small screen devices ( up to 1100px) ---------- */
-
 @media (max-width: 1100px) {
-    .gallery-img-1 {
-        width: 400px;
-    }
-
     .check-form {
         display: block;
         text-align: center;
@@ -918,23 +915,13 @@
 }
 
 /* ----------for small screen devices ( up to 900px) ---------- */
-
 @media (max-width: 900px) {
-    .gallery {
-        grid-template-areas: 'first first''. .''. .';
-    }
-
-    .gallery .gallery-img-1 {
-        width: 100%;
-    }
-
     .review-box {
         width: 80%;
     }
 }
 
 /* ----------for small screen devices ( up to 700px) ---------- */
-
 @media (max-width: 700px) {
     .house-title h1 {
         font-size: 22px;
@@ -959,7 +946,24 @@
     }
 
     .gallery {
-        margin-top: 10px;
+        display: block;
+    }
+
+    .gallery-img-1 img {
+        height: 300px;
+        object-fit: cover;
+        margin-bottom: 5px;
+    }
+
+    .gallery-img-other {
+        grid-template-columns: repeat(2, 1fr);
+        grid-auto-rows: 200px;
+        grid-gap: 5px;
+    }
+
+    .gallery-img-other img {
+        height: 100%;
+        height: 100%;
     }
 
     .small-details h2 {
@@ -988,7 +992,6 @@
 }
 
 /* ----------for small screen devices ( up to 400px) ---------- */
-
 @media (max-width: 440px) {
     .house-details {
         padding: 0;
@@ -1014,6 +1017,20 @@
 
     .modal-body {
         padding: 2px 5px;
+    }
+
+    .gallery-img-1 img {
+        height: 250px;
+        margin-bottom: 0px;
+    }
+
+    .gallery-img-other {
+        grid-auto-rows: 150px;
+    }
+
+    .gallery-img-other img {
+        height: 100%;
+        height: 100%;
     }
 
     .row .modal-body p {
@@ -1092,7 +1109,6 @@
 }
 
 /* ----- locality detail / place detail ----- */
-
 .detail-container {
     margin-top: 30px;
     display: flex;
@@ -1234,7 +1250,6 @@
 }
 
 /* ----- account ----- */
-
 
 /* header */
 .container-header {
