--- a/rooms/templates/rooms/room_detail.html
+++ b/rooms/templates/rooms/room_detail.html
@@ -61,39 +61,36 @@
 
   <div class="gallery">
     {% if room.photo1 %}
+
     <div class="gallery-img-1">
       <a href="{{ room.photo1.url }}" data-lightbox="room_imgs">
         <img src="{{ room.photo1.url }}">
       </a>
     </div>
-    {% endif %}
-    {% if room.photo2 %}
-    <div>
-      <a href="{{ room.photo2.url }}" data-lightbox="room_imgs">
-        <img src="{{ room.photo2.url }}">
-      </a>
+
+    <div class="gallery-img-other">
+      <div>
+        <a href="{{ room.photo2.url }}" data-lightbox="room_imgs">
+          <img src="{{ room.photo2.url }}">
+        </a>
+      </div>
+      <div>
+        <a href="{{ room.photo3.url }}" data-lightbox="room_imgs">
+          <img src="{{ room.photo3.url }}">
+        </a>
+      </div>
+      <div>
+        <a href="{{ room.photo4.url }}" data-lightbox="room_imgs">
+          <img src="{{ room.photo4.url }}">
+        </a>
+      </div>
+      <div>
+        <a href="{{ room.photo5.url }}" data-lightbox="room_imgs">
+          <img src="{{ room.photo5.url }}">
+        </a>
+      </div>
     </div>
-    {% endif %}
-    {% if room.photo3 %}
-    <div>
-      <a href="{{ room.photo3.url }}" data-lightbox="room_imgs">
-        <img src="{{ room.photo3.url }}">
-      </a>
-    </div>
-    {% endif %}
-    {% if room.photo4 %}
-    <div>
-      <a href="{{ room.photo4.url }}" data-lightbox="room_imgs">
-        <img src="{{ room.photo4.url }}">
-      </a>
-    </div>
-    {% endif %}
-    {% if room.photo5 %}
-    <div>
-      <a href="{{ room.photo5.url }}" data-lightbox="room_imgs">
-        <img src="{{ room.photo5.url }}">
-      </a>
-    </div>
+
     {% endif %}
   </div>
 
