personal_data - правки для маленьких экранов

--- a/config/static/css/style.css
+++ b/config/static/css/style.css
@@ -1427,6 +1427,9 @@
     .header-btn li {
         margin-top: 20px;
     }
+    #account_data {
+        width: 90%;
+    }
 
     /* end header */
 
