--- a/blogs/templates/blogs/home.html
+++ b/blogs/templates/blogs/home.html
@@ -33,7 +33,7 @@
   {% endfor %}
 </div>
 
-<div class="about-msg">
+<!-- <div class="about-msg">
   <h2>About JustTravel</h2>
   <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots
     in a piece of classical Latin literature from 45 BC, making it over 2000 years
@@ -41,6 +41,6 @@
     looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum
     passage, and going through the cites of the word in classical literature,
     discovered the undoubtable source.</p>
-</div>
+</div> -->
 
 {% endblock %}
